[gd_scene load_steps=7 format=3 uid="uid://db4trvtd8vv77"]

[ext_resource type="Texture2D" uid="uid://bmo2hmg02boit" path="res://Assets/Art/PipeVertical.png" id="1_nnaa0"]
[ext_resource type="Script" path="res://Scenes/player.gd" id="1_nuqim"]
[ext_resource type="Texture2D" uid="uid://b1lplw76w00vh" path="res://Assets/Art/PipeHorizontalNoHighlight.png" id="2_1b576"]
[ext_resource type="Texture2D" uid="uid://d31vl3s33yut" path="res://Assets/Art/PipeHorizontal.png" id="3_gi2c8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fvnj8"]
radius = 57.0
height = 260.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6noob"]
radius = 57.0
height = 260.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_nuqim")

[node name="UpperPipe" type="Node2D" parent="."]
position = Vector2(0, -150)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="UpperPipeV" type="Sprite2D" parent="UpperPipe"]
modulate = Color(1, 1, 1, 0.607843)
position = Vector2(-3, -680)
texture = ExtResource("1_nnaa0")

[node name="UpperPipeH" type="Sprite2D" parent="UpperPipe"]
position = Vector2(0, -55)
texture = ExtResource("2_1b576")

[node name="UpperArea2D" type="Area2D" parent="."]

[node name="Upper" type="CollisionShape2D" parent="UpperArea2D"]
position = Vector2(0, -205)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fvnj8")

[node name="UpperPipeConnection" type="Marker2D" parent="."]
position = Vector2(0, -262)

[node name="LowerPipe" type="Node2D" parent="."]
position = Vector2(0, 150)
scale = Vector2(-1, -1)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="LowerPipeV" type="Sprite2D" parent="LowerPipe"]
modulate = Color(1, 1, 1, 0.607843)
position = Vector2(3, -679)
scale = Vector2(-1, 1)
texture = ExtResource("1_nnaa0")

[node name="LowerPipeH" type="Sprite2D" parent="LowerPipe"]
position = Vector2(0, -55)
scale = Vector2(-1, -1)
texture = ExtResource("3_gi2c8")

[node name="LowerArea2D" type="Area2D" parent="."]

[node name="Lower" type="CollisionShape2D" parent="LowerArea2D"]
position = Vector2(0, 205)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6noob")

[node name="LowerPipeConnection" type="Marker2D" parent="."]
position = Vector2(0, 262)

[node name="Empty - DONOTREMOVE" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-190, -91, -197, -2, -101, -68)
disabled = true

[connection signal="body_entered" from="UpperArea2D" to="." method="_on_upper_area_2d_body_entered"]
[connection signal="body_entered" from="LowerArea2D" to="." method="_on_lower_area_2d_body_entered"]
